# scrap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bytetest.cpp  example  main.cpp  makefile  scrap  test
common/: codes.h  opcode.cpp  opcode.h  optostr.cpp  optostr.h  scope.h  scrapexcept.h  stack.h  stdfunc.cpp  stdfunc.h
compiler/: expr.cpp  expr.h  fragment.cpp  fragment.h  func.cpp  func.h  funcdef.cpp  funcdef.h  interop.cpp  interop.h  parser.cpp  parser.h  statement.cpp  statement.h  tokens.cpp  tokens.h
doc/: binary  lang  runtimeenv.dia  runtimeenv.dia~  vm
ex/: add.sca
examples/: basic.sc  example.sc  fibonacci.sc
run/: env.cpp  env.h  scope.cpp  scope.h  var.cpp  var.h
src/: BinaryFile.cpp  BinaryFile.h  Bytecode.cpp  Bytecode.h  Class.cpp  Class.h  Debug.cpp  Debug.h  Environment.cpp  Environment.h  Executor.cpp  Executor.h  Function.cpp  Function.h  FunctionInvocation.cpp  FunctionInvocation.h  Heap.cpp  Heap.h  IndexList.cpp  IndexList.h  MemberList.cpp  MemberList.h  Method.cpp  Method.h  MethodInvocation.cpp  MethodInvocation.h  Object.cpp  Object.h  Program.cpp  Program.h  ProgramParser.cpp  ProgramParser.h  Scrap.cpp  Scrap.h  Stack.cpp  Stack.h  Variable.cpp  Variable.h  fileio.c  fileio.h  (+2 more)
src/tests/: @  BinaryFile_test.cpp  Bytecode_test.cpp  Byteode_test.cpp  Class_test.cpp  Executor_test.cpp  Heap_test.cpp  MethodInvocation_test.cpp  Method_test.cpp  Object_test.cpp  ProgramParser_test.cpp  ScrapTest.cpp  ScrapTest.h  Stack_test.cpp  Tests.cpp  Variable_test.cpp  Variable_test.h
testfiles/: binary_string  binary_ulong  binary_unsigned  testprog  testprog_base  testprog_trailing_bytes
